2006-12-08  Jean-Louis Martineau <martineau@zmanda.com>
	* changer-src/chg-rait.sh.in: Fix typo for -reset.

2006-12-07  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/util.c (lookup_keyword): Use strcasecmp.
	* common-src/util.c (get_conftoken): Don;t convert to uppercase.
	* server-src/getconf.c: Don;t print extra '\n' for --list.

2006-12-04  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amtape.h: Remove file.

2006-11-29  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/sendbackup.c: Kill dump process on error.

2006-11-29  Jean-Louis Martineau <martineau@zmanda.com>
	* changer-src/chg-chio.pl.in: Check tapedev is set.
	* changer-src/chg-disk.sh.in: Check tapedev is set.
	* changer-src/chg-iomega.pl.in: Check tapedev is set.
	* changer-src/chg-manual.sh.in: Check tapedev is set.
	* changer-src/chg-mtx.sh.in: Check tapedev is set.
	* changer-src/chg-rth.pl.in: Check tapedev is set.
	* server-src/amcheck.c: Tapedev is needed only if tpchanger is not set.
	* server-src/amflush.c: Tapedev is needed only if tpchanger is not set.
	* server-src/amindexd.c: Tapedev is needed only if tpchanger is not set
	* server-src/taper.c: Tapedev is needed only if tpchanger is not set.

2006-11-29  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/sendbackup.c: Ignore tar exit with status 1.

2006-11-29  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amindexd.c (clean_backslash): New function use to unescape
						 '\' characters in index files.

2006-11-29  Jean-Louis Martineau <martineau@zmanda.com>
	* restore-src/restore.c (search_tapes): Fix prompt_out setting.

2006-11-24  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/util.c (copy_file): Fix compilation error.

2006-11-24  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/sendbackup-dump.c, client-src/sendbackup-gnutar.c,
	  client-src/sendsize.c,
	  server-src/amindexd.c: Patch for gcc-3.2.3 to compile the new
				 vstralloc macro.
