@@ -209,7 +209,6 @@ and may include:</para>
 
 <note>Many systems only report good data when a tape is in the drive and ready.
 </note>
-<para />
 </refsect1>
 
 <refsect1><title>AUTHOR</title>
