@@ -55,7 +55,8 @@ man page for more details about &A;.</para>
 <refsect1><title>OPTIONS</title>
 <note>The Default values are those set at compile-time.
 Use <command>amrestore</command> to recover client-encrypted or
-client-custom-compressed tapes.</note>
+client-custom-compressed tapes.
+</note>
 <variablelist remap='TP'>
   <varlistentry>
   <term><emphasis remap='B'>[ -C ] config</emphasis></term>
