@@ -1,4 +1,10 @@
 2006-12-08  Jean-Louis Martineau <martineau@zmanda.com>
+	* man/xml-source/amadmin.8.xml, man/xml-source/amanda.8.xml,
+	  man/xml-source/amanda.conf.5.xml, man/xml-source/amcheck.8.xml,
+	  man/xml-source/amfetchdump.8.xml, man/xml-source/ammt.8.xml,
+	  man/xml-source/amrecover.8.xml: Move </note> tag to beginning of line
+
+2006-12-08  Jean-Louis Martineau <martineau@zmanda.com>
 	* changer-src/chg-rait.sh.in: Fix typo for -reset.
 
 2006-12-07  Jean-Louis Martineau <martineau@zmanda.com>
